--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Noto Serif", sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
 }
 
 p {
-    font-family: "Playwrite BE WAL", cursive;
+    font-family: "Roboto", sans-serif;
 }
 
 section h2 {
@@ -86,6 +88,12 @@ nav ul li a:hover {
     }
 }
 
+section#about h2 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
 .about-content {
     position: relative;
     width: 100%;
@@ -107,7 +115,7 @@ nav ul li a:hover {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: flex-end;
     align-items: center;
     text-align: center;
     background: rgba(0, 0, 0, 0.7);
@@ -155,23 +163,75 @@ nav ul li a:hover {
     }
 }
 
+#skills {
+    text-align: center;
+    padding: 2rem;
+}
+
 .skills-container {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2rem;
     flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
 }
 
-.skill {
-    text-align: center;
-    margin: 1rem;
-}
-
-.skill canvas {
+.skill-card {
     background: #f4f4f4;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 200px;
+    cursor: pointer;
+    position: relative;
+}
+
+.skill-card img {
+    width: 50px;
+    height: 50px;
+}
+
+.skill-card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.skill-card.clicked {
+    animation: clickAnimation 0.5s forwards;
+}
+
+@keyframes clickAnimation {
+    0% {
+        transform: scale(1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    50% {
+        transform: scale(1.2);
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+}
+
+#skill-info {
+    margin-top: 2rem;
+    text-align: center;
+}
+
+.hidden {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .skills-container {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 section {
